--- a/30-cdptw1-1/1339/css/1339.css
+++ b/30-cdptw1-1/1339/css/1339.css
@@ -1,182 +1,115 @@
-.type-1339 .navbar-default .navbar-nav>li>a {
-  color: #fff;
-}
-.type-1339 .row {
-  margin-left: 0 !important;
-  margin-right: 0 !important;
-}
-.type-1339 .a {
-  padding-right: 2px !important;
-  padding-left: 2px !important;
-}
-.type-1339 .owl-next {
-  color: red;
-}
-.type-1339 .navbar-default .navbar-toggle:hover {
-  background-color: #DFBA6A;
-  border: 1px solid #DFBA6A;
-}
-.type-1339 .header-logo {
-  padding: 15px;
-}
-.type-1339 .header-logo .logo {
-  float: left;
-}
-.type-1339 .header-logo .logo #s1 {
-  font-size: 30px;
-  color: black;
-}
-.type-1339 .header-logo .logo #s2 {
-  font-size: 30px;
-  color: #dfba6a;
-}
-.type-1339 .header-logo .logo #s3 {
-  font-size: 50px;
-}
-.type-1339 .header-logo .logo #s4 {
-  position: relative;
-  top: -5px;
-  color: black;
-  font-size: 17px;
-}
-.type-1339 .header-logo .header-right {
-  margin-top: 20px;
-  float: right;
-}
-.type-1339 .header-logo .header-right a {
-  color: black;
-  font-size: 15px;
-}
-.type-1339 .header-logo .header-right .r-first {
-  position: relative;
-  top: -14px;
-  float: right;
-}
-.type-1339 .header-logo .header-right .r-first a {
-  text-decoration: none;
-}
-.type-1339 .header-logo .header-right .r-sc {
-  width: 450px;
-  height: 42px;
-  clear: both;
-}
-.type-1339 .header-logo .header-right .r-sc .input {
-  float: right;
-  width: 209px;
-  position: relative;
-}
-.type-1339 .header-logo .header-right .r-sc .input input[type="text"] {
-  padding: 10px 5px;
+.type-1339 .page {
+  background-image: url("../images/maylanh.jpg");
   width: 100%;
-  float: right;
+  height: 100%;
+  font-family: 'Montserrat', sans-serif;
+  border: none;
+  height: auto;
+  padding-top: 20px;
 }
-.type-1339 .header-logo .header-right .r-sc .input .fa-search {
-  position: absolute;
-  right: 5px;
-  top: 10px;
+.type-1339 .container {
+  padding-top: 50px;
 }
-.type-1339 .header-logo .header-right .r-sc select {
-  margin: 0 5px;
-  padding: 10px 0;
-  float: right;
+.type-1339 .container .logo {
+  padding-top: 0px;
+  padding-bottom: 50px;
 }
-.type-1339 .header-logo .header-right .r-sc .ic-bar {
-  float: right;
-  border: 1px solid #bbb;
-  height: 42px;
-  width: 54px;
-  padding: 8px 14px;
+.type-1339 .container h1 {
+  font-size: 36px;
+  font-weight: 400;
+  color: black;
 }
-.type-1339 .header-logo .header-right .r-sc .ic-bar i {
-  font-size: 25px;
+.type-1339 .container p {
+  padding-top: 20px;
 }
-.type-1339 .navbar {
-  margin-top: 20px;
-  border-radius: 0 !important;
-  background: #3a3d44 !important;
+.type-1339 .container h5 {
+  font-size: 20px;
+  color: #335691;
+  font-weight: bold;
+  padding-top: 30px;
 }
-.type-1339 .navbar .navbar-header {
-  cursor: pointer;
+.type-1339 .container form {
+  background-color: #335691;
+  width: 360px;
+  height: 520px;
+  padding: 6px 12px;
+  font-size: 14px;
+  text-align: center;
 }
-.type-1339 .navbar .navbar-right {
-  margin-right: 10px;
+.type-1339 .container form .submit {
+  background-color: orange;
+  text-align: center;
+  padding: 10px 130px;
 }
-.type-1339 .navbar .navbar-right li {
-  border-left: 1px solid #ccc;
+.type-1339 .container form .content {
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
-.type-1339 .navbar .navbar-right li:last-child {
-  border-right: 1px solid #ccc;
+.type-1339 .container form h2 {
+  font-size: 20px;
+  color: #fff;
+  text-aline: center;
 }
-.type-1339 .navbar ul li {
-  position: relative;
+.type-1339 .container form h1 {
+  color: #fff;
+  font-size: 30px;
+  text-aline: center;
 }
-.type-1339 .navbar ul li .new {
-  position: absolute;
-  top: -18px;
-  padding: 4px 7px;
-  right: 0;
-  width: 38px;
-  height: 27px;
-  background: #bfae80;
+.type-1339 .container form p {
+  color: #fff;
+  font-size: 16px;
+  text-aline: center;
 }
-.type-1339 .navbar ul li .new span {
-  font-size: 10px;
+.type-1339 .container .form-control {
+  display: block;
+  width: 100%;
+  height: 50px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  background-color: #335691;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding-top: 20px;
   color: white;
 }
-.type-1339 .navbar ul li:hover,
-.type-1339 .navbar ul li:focus {
-  background: #dfba6a;
+.type-1339 .container .form-control .button {
+  padding-top: 50px;
+  background-color: black;
+  color: #fff;
+  border: 3px solid #fff;
 }
-@media screen and (max-width: 884px) {
-  .type-1339 .navbar {
-    margin-top: 10%;
-  }
-  .type-1339 .navbar-right {
-    visibility: hidden;
-    display: none;
-  }
+.type-1339 .container .r-first {
+  float: right;
 }
-@media screen and (max-width: 884px) {
-  .type-1339 .header-logo {
-    position: relative;
-    padding: 0 !important;
-    margin: auto;
-    height: 100px;
-    text-align: center;
-  }
-  .type-1339 .header-logo .logo {
-    margin: 0;
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%,-50%);
-    float: none;
-  }
-  .type-1339 .header-logo .header-right {
-    margin: 0;
-    position: absolute;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%,-50%);
-    display: inline-block;
-    top: 100%;
-    float: left !important;
-  }
-  .type-1339 .header-logo .header-right .r-first {
-    float: none !important;
-  }
-  .type-1339 .header-logo .header-right .r-sc {
-    margin-left: -10%;
-  }
+.type-1339 .container .ic-bar {
+  float: right;
 }
-@media screen and (max-width: 884px) and screen and (max-width: 500px) {
-  .type-1339 .r-sc {
-    visibility: hidden;
-  }
+.type-1339 .container .languages {
+  float: right;
 }
-@media screen and (max-width: 500px) {
-  .type-1339 .r-sc {
-    visibility: hidden;
-  }
+.type-1339 .container .input {
+  float: right;
+}
+.type-1339 .container .navbar-default .navbar-collapse {
+  background-color: #3a3d44;
+}
+.type-1339 .container .navbar-default .navbar-nav>li>a {
+  color: white;
+}
+.type-1339 .container .navbar-default .navbar-1>li>a:hover {
+  color: #d4cdcd;
+}
+.type-1339 .container .new {
+  background: #eac66a;
+  background-size: cover;
+  height: 22px;
+  position: absolute;
+  top: -23px;
+  width: 52px;
+}
+.type-1339 .container .new span {
+  color: #fff;
+  margin-left: 10px;
 }
