--- a/30-cdptw1-1/1339/less/1339.less
+++ b/30-cdptw1-1/1339/less/1339.less
@@ -93,7 +93,14 @@
 		}
 		.r-first{
 			float: right;
-		
+			color: black;
+		}
+		.navbar-1{
+			color: black;
+		}
+		.navbar-1: hover{
+			text-decoration: none;
+			color: #444444;
 		}
 		.ic-bar{
 			float: right;
@@ -107,11 +114,14 @@
 		.navbar-default .navbar-collapse{
 			background-color: #3a3d44;
 		}
-		.navbar-default .navbar-nav>li>a{
-			color: white;
+		.navbar-2{
+			color : white;
 		}
-		.navbar-default .navbar-1>li>a:hover{
-			color: #d4cdcd;
+		.navbar-2: hover{
+			color: blue;
+		}
+		.navbar-default .navbar-nav>li>a :hover{
+			color: blue;
 		}
 		.new{
             background: #eac66a;
@@ -119,14 +129,14 @@
             height: 22px;
 
             position: absolute;
-            top: -23px;
+            top: -12px;
             width: 52px;
             span{
                 color: #fff;
                 margin-left: 10px;
             }
         }
-
+        
 	}
 
 }
