--- a/30-cdptw1-1/1339/css/1339.css
+++ b/30-cdptw1-1/1339/css/1339.css
@@ -82,6 +82,14 @@
 }
 .type-1339 .container .r-first {
   float: right;
+  color: black;
+}
+.type-1339 .container .navbar-1 {
+  color: black;
+}
+.type-1339 .container .navbar-1: hover {
+  text-decoration: none;
+  color: #444444;
 }
 .type-1339 .container .ic-bar {
   float: right;
@@ -95,18 +103,21 @@
 .type-1339 .container .navbar-default .navbar-collapse {
   background-color: #3a3d44;
 }
-.type-1339 .container .navbar-default .navbar-nav>li>a {
+.type-1339 .container .navbar-2 {
   color: white;
 }
-.type-1339 .container .navbar-default .navbar-1>li>a:hover {
-  color: #d4cdcd;
+.type-1339 .container .navbar-2: hover {
+  color: blue;
+}
+.type-1339 .container .navbar-default .navbar-nav>li>a :hover {
+  color: blue;
 }
 .type-1339 .container .new {
   background: #eac66a;
   background-size: cover;
   height: 22px;
   position: absolute;
-  top: -23px;
+  top: -12px;
   width: 52px;
 }
 .type-1339 .container .new span {
