--- a/30-cdptw1-1/1339/less/1339.less
+++ b/30-cdptw1-1/1339/less/1339.less
@@ -98,9 +98,9 @@
 		.navbar-1{
 			color: black;
 		}
-		.navbar-1: hover{
-			text-decoration: none;
-			color: #444444;
+		.navbar-1:hover {
+   		color: #b3b3b3;
+    	text-decoration: none;
 		}
 		.ic-bar{
 			float: right;
@@ -117,11 +117,9 @@
 		.navbar-2{
 			color : white;
 		}
-		.navbar-2: hover{
-			color: blue;
-		}
-		.navbar-default .navbar-nav>li>a :hover{
-			color: blue;
+		
+		.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover {
+			color: #b3b3b3;
 		}
 		.new{
             background: #eac66a;
