--- a/30-cdptw1-1/1339/less/1339.less
+++ b/30-cdptw1-1/1339/less/1339.less
@@ -91,6 +91,7 @@
 
 			    }
 		}
+
 		.r-first{
 			float: right;
 			color: black;
@@ -104,12 +105,15 @@
 		}
 		.ic-bar{
 			float: right;
+			padding: 20px;
 		}
 		.languages{
 			float: right;
+			padding-bottom: 7px;
 		}
 		.input{
 			float: right;
+			padding: 20px;
 		}
 		.navbar-default .navbar-collapse{
 			background-color: #3a3d44;
@@ -117,9 +121,18 @@
 		.navbar-2{
 			color : white;
 		}
-		
+		.navbar-3{
+			color: white;
+			border-left: #fff solid 1px; 
+		}
 		.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover {
 			color: #b3b3b3;
+		}
+		.border1{
+			border-left: #3a3d44 solid 1px;
+			border-top:  #3a3d44 solid 1px;
+			border-right:  #3a3d44 solid 1px;
+			border-bottom: #3a3d44 solid 1px;
 		}
 		.new{
             background: #eac66a;
