--- a/1335/less/1335.less
+++ b/1335/less/1335.less
@@ -46,12 +46,18 @@
 		    padding: 6px 12px;
 		    font-size: 14px;
 		    text-align: center;
+		.submit{
+			color: #fff;
+		    border-radius: 2%;
+		    background-color: orange;
+		    text-transform: uppercase;
+		    font-weight: 600;
+		    text-align: justify;
+		    padding: 5% 26%;
+		    border: none;
+		    margin-top: 10%;
+		}
 
-			.submit{
-				background-color: orange;
-				text-align: center;
-				padding: 10px 130px;
-			}
 
 		.content{
 			padding-top:10px;
@@ -97,7 +103,7 @@
 
 			    }
 		}
-		
+
 	}
 
 }
